# xmsmesh

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ____init_____8py_source.html  _clang-format  _doxygen_mainpage_8md_source.html  _me_bad_quad_remover_8cpp.html  _me_bad_quad_remover_8cpp.js  _me_bad_quad_remover_8cpp_source.html  _me_bad_quad_remover_8h.html  _me_bad_quad_remover_8h_source.html  _me_bad_quad_remover_8t_8h.html  _me_bad_quad_remover_8t_8h_source.html  _me_intersect_polys_8cpp.html  _me_intersect_polys_8cpp.js  _me_intersect_polys_8cpp_source.html  _me_intersect_polys_8h.html  _me_intersect_polys_8h_source.html  _me_intersect_polys_8t_8h.html  _me_intersect_polys_8t_8h_source.html  _me_mesh_utils_8cpp.html  _me_mesh_utils_8cpp.js  _me_mesh_utils_8cpp_source.html  _me_mesh_utils_8h.html  _me_mesh_utils_8h.js  _me_mesh_utils_8h_source.html  _me_mesh_utils_8t_8h.html  _me_mesh_utils_8t_8h_source.html  _me_mesh_utils__py_8cpp.html  _me_mesh_utils__py_8cpp.js  _me_mesh_utils__py_8cpp_source.html  _me_mesh_utils__pyt_8py_source.html  _me_multi_poly_mesher_8cpp.html  _me_multi_poly_mesher_8cpp_source.html  _me_multi_poly_mesher_8h.html  _me_multi_poly_mesher_8h_source.html  _me_multi_poly_mesher_8t_8h.html  (+426 more)
Doxygen/: Doxyfile  DoxygenMainpage.md  Meshing_Tutorial.md  Redistribution_Tutorial.md
dev/: setenv.bat  setenv.sh
examples/: MeshSimplePolygon.html  MeshSimplePolygon.ipynb  meshing_tools.py
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  gettingstarted.doctree  index.doctree  modules.doctree
pydocs/_sources/: index.rst.txt  modules.rst.txt
pydocs/modules/meshing/: MeBadQuadRemover.html  MeMeshUtils.html  MeMultiPolyMesher.html  MeMultiPolyMesherIo.html  MeMultiPolyTo2dm.html  MePolyMesher.html  MePolyRedistributePts.html  MeQuadBlossom.html  MeshUtils.html  MultiPolyMesherIo.html  PolyInput.html  PolyRedistributePts.html  RefinePoint.html
pydocs/source/: conf.py  getting_started.rst  index.rst  modules.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+67 more)
test_files/Tutorial_Meshing/: AutoCorrectDz_base.vtu  AutoCorrectExcessiveConnections_Input.vtu  AutoCorrectExcessiveConnections_base.vtu  AutoCorrectSmallAngles_Input.vtu  AutoCorrectSmallAngles_base.vtu  Example_Breakline_base.2dm  Example_Breakline_base.vtu  Example_Breakline_baseMacOsX.2dm  Example_Breakline_baseMacOsX.vtu  Example_ComplexPolygon_base.2dm  Example_ComplexPolygon_base.vtu  Example_ComplexPolygon_baseMacOsX.2dm  Example_ConstantSmooth2_base.2dm  Example_ConstantSmooth2_baseMacOsX.2dm  Example_ConstantSmooth_base.2dm  Example_ConstantSmooth_base.vtu  Example_Decimate_Input.vtu  Example_Decimate_base.vtu  Example_Merge_base.vtu  Example_MultiPolys.txt  Example_MultiPolys_base.2dm  Example_MultiPolys_base.vtu  Example_MultiPolys_baseMacOsX.2dm  Example_Patch_base.2dm  Example_QuadBlossom_quadUGridImproved2_base.txt  Example_QuadBlossom_quadUGridImproved_base.txt  Example_QuadBlossom_quadUGrid_base.txt  Example_QuadBlossom_triangleUGridInput.txt  Example_Quadratic_base.vtu  Example_RefinePoints_base.2dm  Example_RefinePoints_base.vtu  Example_Relax_base.vtu  Example_ScalarPaving_base.2dm  Example_ScalarPaving_base.vtu  Example_ScalarPaving_baseMacOsX.2dm  Example_SimplePolygonWithHole_base.2dm  Example_SimplePolygonWithHole_base.vtu  Example_SimplePolygonWithHole_baseMacOsX.2dm  Example_SimplePolygon_base.2dm  Example_SimplePolygon_base.vtu  (+4 more)
test_files/meshing/: AutoCorrect0_base.vtu  AutoCorrect10_base.vtu  AutoCorrect10_baseMacOsX.vtu  AutoCorrect11_base.vtu  AutoCorrect11_input.vtu  AutoCorrect1_base.vtu  AutoCorrect4_base.vtu  AutoCorrect5_base.vtu  AutoCorrect5_input.vtu  AutoCorrect6_base.vtu  AutoCorrect7_base.vtu  AutoCorrect7_baseMacOsX.vtu  AutoCorrect7_input.vtu  AutoCorrect7a_base.vtu  AutoCorrect7a_baseMacOsX.vtu  AutoCorrect9_base.vtu  AutoCorrect9_input.vtu  Case4InterpElev_base.vtu  Case8_base.vtu  Case8_baseMacOsX.vtu  CasePatch1_base.vtu  CasePatch1a.map  CasePatch1a.mapatt  CasePatch1a_base.vtu  CasePatch2.map  CasePatch2.mapatt  CasePatch2_base.vtu  CasePatch3.map  CasePatch3.mapatt  CasePatch3.txt  CasePatch4.txt  CasePatch4_base.vtu  CasePatch4a_base.vtu  CasePatch4b_base.vtu  CasePatch5.map  CasePatch5.mapatt  CasePatch5.txt  CasePatch5_base.vtu  CasePatch5a_base.vtu  CasePatch5b_base.vtu  (+77 more)
test_files/meshing/internalFeatures/: case0.map  case0.txt  case0_base.2dm  case1.map  case1.txt  case1_base.2dm  case2.map  case2.txt  case2_base.2dm
test_files/meshing/relax/: CaseRefinePts1_base.vtu  CaseRefinePts1_unrelaxed.vtu  CaseRefinePts_base.vtu  CaseRefinePts_unrelaxed.vtu  case1_base.vtu  case1_unrelaxed.vtu  case2_base.vtu  case2_unrelaxed.vtu  case3_unrelaxed.vtu  case4_base.vtu  case4_unrelaxed.vtu  case5_base.vtu  case5_unrelaxed.vtu
test_files/python/: out_file.2dm
test_files/redistribution/: Coastline.txt  Coastline_base.txt  Island.txt  Island_base.txt  LongArcs.map
test_package/: example.cpp
xmsmesh/meshing/: MeBadQuadRemover.cpp  MeMeshUtils.cpp  MeMeshUtils.h  MeMeshUtils.t.h  MeMultiPolyMesher.cpp  MeMultiPolyMesher.h  MeMultiPolyMesher.t.h  MeMultiPolyMesherIo.h  MeMultiPolyTo2dm.cpp  MeMultiPolyTo2dm.h  MeMultiPolyTo2dm.t.h  MePolyMesher.cpp  MePolyMesher.h  MePolyMesher.t.h  MePolyRedistributePts.cpp  MePolyRedistributePts.h  MePolyRedistributePts.t.h  MeQuadBlossom.cpp  MeQuadBlossom.h  MeQuadBlossom.t.h
xmsmesh/python/: cxxtest.cpp  xmsmesh_py.cpp
xmsmesh/tutorial/: TutMeshing.cpp  TutMeshing.t.h
(+83 files in other folders)
